src/test/ui/custom_attribute.stderr
error: cannot find attribute macro `foo` in this scope
  --> $DIR/custom_attribute.rs:3:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute macro `foo` in this scope
  --> $DIR/custom_attribute.rs:5:7
   |
LL |     #[foo]
   |       ^^^

error: cannot find attribute macro `foo` in this scope
  --> $DIR/custom_attribute.rs:7:7
   |
LL |     #[foo]
   |       ^^^

error: aborting due to 3 previous errors

